tests/dataset/tpc-ds/compiler/c/q33.error
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c: In function ‘test_TPCDS_Q33_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:343:20: error: incompatible types when initializing type ‘int’ using type ‘tmp_item_t’
  343 |                    (tmp_item_t){.i_manufact_id = 2, .total_sales = 50.0}};
      |                    ^
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:346:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  346 |   if (test_TPCDS_Q33_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:350:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  350 |       if (test_TPCDS_Q33_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:394:25: warning: implicit declaration of function ‘ss_item_list_t_create’ [-Wimplicit-function-declaration]
  394 |   ss_item_list_t tmp4 = ss_item_list_t_create(store_sales.len * date_dim.len *
      |                         ^~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:394:58: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  394 |   ss_item_list_t tmp4 = ss_item_list_t_create(store_sales.len * date_dim.len *
      |                                                          ^
      |                                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:394:73: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  394 |   ss_item_list_t tmp4 = ss_item_list_t_create(store_sales.len * date_dim.len *
      |                                                                         ^
      |                                                                         ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:395:63: error: ‘(customer_addres_t *)&customer_address’ is a pointer; did you mean to use ‘->’?
  395 |                                               customer_address.len * item.len);
      |                                                               ^
      |                                                               ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:395:74: error: ‘(item_t *)&item’ is a pointer; did you mean to use ‘->’?
  395 |                                               customer_address.len * item.len);
      |                                                                          ^
      |                                                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:426:26: warning: implicit declaration of function ‘cs_item_list_t_create’ [-Wimplicit-function-declaration]
  426 |   cs_item_list_t tmp10 = cs_item_list_t_create(
      |                          ^~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:427:20: error: ‘(catalog_sale_t *)&catalog_sales’ is a pointer; did you mean to use ‘->’?
  427 |       catalog_sales.len * date_dim.len * customer_address.len * item.len);
      |                    ^
      |                    ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:427:35: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  427 |       catalog_sales.len * date_dim.len * customer_address.len * item.len);
      |                                   ^
      |                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:427:58: error: ‘(customer_addres_t *)&customer_address’ is a pointer; did you mean to use ‘->’?
  427 |       catalog_sales.len * date_dim.len * customer_address.len * item.len);
      |                                                          ^
      |                                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:427:69: error: ‘(item_t *)&item’ is a pointer; did you mean to use ‘->’?
  427 |       catalog_sales.len * date_dim.len * customer_address.len * item.len);
      |                                                                     ^
      |                                                                     ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:458:26: warning: implicit declaration of function ‘ws_item_list_t_create’ [-Wimplicit-function-declaration]
  458 |   ws_item_list_t tmp16 = ws_item_list_t_create(web_sales.len * date_dim.len *
      |                          ^~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:458:57: error: ‘(web_sale_t *)&web_sales’ is a pointer; did you mean to use ‘->’?
  458 |   ws_item_list_t tmp16 = ws_item_list_t_create(web_sales.len * date_dim.len *
      |                                                         ^
      |                                                         ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:458:72: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  458 |   ws_item_list_t tmp16 = ws_item_list_t_create(web_sales.len * date_dim.len *
      |                                                                        ^
      |                                                                        ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:459:64: error: ‘(customer_addres_t *)&customer_address’ is a pointer; did you mean to use ‘->’?
  459 |                                                customer_address.len * item.len);
      |                                                                ^
      |                                                                ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:459:75: error: ‘(item_t *)&item’ is a pointer; did you mean to use ‘->’?
  459 |                                                customer_address.len * item.len);
      |                                                                           ^
      |                                                                           ->
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:490:26: warning: implicit declaration of function ‘concat’ [-Wimplicit-function-declaration]
  490 |   list_int union_sales = concat(tmp4, tmp10, tmp16);
      |                          ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:490:26: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq331134953827/001/prog.c:507:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  507 |   test_TPCDS_Q33_simplified_result = result;
      |                                      ^~~~~~
